// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: built-in profile 1`] = `
<tr
  className="quality-profiles-table-row text-middle"
  data-key="key"
  data-name="name"
>
  <td
    className="quality-profiles-table-name text-middle"
  >
    <div
      className="display-flex-center"
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    >
      <div>
        <ProfileLink
          language="js"
          name="name"
          organization={null}
        >
          name
        </ProfileLink>
      </div>
      <BuiltInQualityProfileBadge
        className="spacer-left"
      />
    </div>
  </td>
  <td
    className="quality-profiles-table-projects thin nowrap text-middle text-right"
  >
    <span>
      3
    </span>
  </td>
  <td
    className="quality-profiles-table-rules thin nowrap text-middle text-right"
  >
    <div>
      <span
        className="spacer-right"
      >
        <Tooltip
          overlay="quality_profiles.deprecated_rules"
        >
          <Link
            className="badge badge-error"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/coding_rules",
                "query": Object {
                  "activation": "true",
                  "qprofile": "key",
                  "statuses": "DEPRECATED",
                },
              }
            }
          >
            2
          </Link>
        </Tooltip>
      </span>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/coding_rules",
            "query": Object {
              "activation": "true",
              "qprofile": "key",
            },
          }
        }
      >
        10
      </Link>
    </div>
  </td>
  <td
    className="quality-profiles-table-date thin nowrap text-middle text-right"
  >
    <ProfileDate />
  </td>
  <td
    className="quality-profiles-table-date thin nowrap text-middle text-right"
  >
    <ProfileDate />
  </td>
  <td
    className="quality-profiles-table-actions thin nowrap text-middle text-right"
  >
    <withRouter(ProfileActions)
      fromList={true}
      organization={null}
      profile={
        Object {
          "activeDeprecatedRuleCount": 2,
          "activeRuleCount": 10,
          "childrenCount": 0,
          "depth": 1,
          "isBuiltIn": true,
          "isDefault": false,
          "isInherited": false,
          "key": "key",
          "language": "js",
          "languageName": "JavaScript",
          "name": "name",
          "organization": "foo",
          "projectCount": 3,
        }
      }
      updateProfiles={[MockFunction]}
    />
  </td>
</tr>
`;

exports[`should render correctly: default 1`] = `
<tr
  className="quality-profiles-table-row text-middle"
  data-key="key"
  data-name="name"
>
  <td
    className="quality-profiles-table-name text-middle"
  >
    <div
      className="display-flex-center"
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    >
      <div>
        <ProfileLink
          language="js"
          name="name"
          organization={null}
        >
          name
        </ProfileLink>
      </div>
    </div>
  </td>
  <td
    className="quality-profiles-table-projects thin nowrap text-middle text-right"
  >
    <span>
      3
    </span>
  </td>
  <td
    className="quality-profiles-table-rules thin nowrap text-middle text-right"
  >
    <div>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/coding_rules",
            "query": Object {
              "activation": "true",
              "qprofile": "key",
            },
          }
        }
      >
        10
      </Link>
    </div>
  </td>
  <td
    className="quality-profiles-table-date thin nowrap text-middle text-right"
  >
    <ProfileDate />
  </td>
  <td
    className="quality-profiles-table-date thin nowrap text-middle text-right"
  >
    <ProfileDate />
  </td>
  <td
    className="quality-profiles-table-actions thin nowrap text-middle text-right"
  >
    <withRouter(ProfileActions)
      fromList={true}
      organization={null}
      profile={
        Object {
          "activeDeprecatedRuleCount": 0,
          "activeRuleCount": 10,
          "childrenCount": 0,
          "depth": 1,
          "isBuiltIn": false,
          "isDefault": false,
          "isInherited": false,
          "key": "key",
          "language": "js",
          "languageName": "JavaScript",
          "name": "name",
          "organization": "foo",
          "projectCount": 3,
        }
      }
      updateProfiles={[MockFunction]}
    />
  </td>
</tr>
`;

exports[`should render correctly: default profile 1`] = `
<tr
  className="quality-profiles-table-row text-middle"
  data-key="key"
  data-name="name"
>
  <td
    className="quality-profiles-table-name text-middle"
  >
    <div
      className="display-flex-center"
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    >
      <div>
        <ProfileLink
          language="js"
          name="name"
          organization={null}
        >
          name
        </ProfileLink>
      </div>
    </div>
  </td>
  <td
    className="quality-profiles-table-projects thin nowrap text-middle text-right"
  >
    <DocTooltip
      doc={Promise {}}
    >
      <span
        className="badge"
      >
        default
      </span>
    </DocTooltip>
  </td>
  <td
    className="quality-profiles-table-rules thin nowrap text-middle text-right"
  >
    <div>
      <span
        className="spacer-right"
      >
        <Tooltip
          overlay="quality_profiles.deprecated_rules"
        >
          <Link
            className="badge badge-error"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/coding_rules",
                "query": Object {
                  "activation": "true",
                  "qprofile": "key",
                  "statuses": "DEPRECATED",
                },
              }
            }
          >
            2
          </Link>
        </Tooltip>
      </span>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/coding_rules",
            "query": Object {
              "activation": "true",
              "qprofile": "key",
            },
          }
        }
      >
        10
      </Link>
    </div>
  </td>
  <td
    className="quality-profiles-table-date thin nowrap text-middle text-right"
  >
    <ProfileDate />
  </td>
  <td
    className="quality-profiles-table-date thin nowrap text-middle text-right"
  >
    <ProfileDate />
  </td>
  <td
    className="quality-profiles-table-actions thin nowrap text-middle text-right"
  >
    <withRouter(ProfileActions)
      fromList={true}
      organization={null}
      profile={
        Object {
          "activeDeprecatedRuleCount": 2,
          "activeRuleCount": 10,
          "childrenCount": 0,
          "depth": 1,
          "isBuiltIn": false,
          "isDefault": true,
          "isInherited": false,
          "key": "key",
          "language": "js",
          "languageName": "JavaScript",
          "name": "name",
          "organization": "foo",
          "projectCount": 3,
        }
      }
      updateProfiles={[MockFunction]}
    />
  </td>
</tr>
`;

exports[`should render correctly: with deprecated rules 1`] = `
<tr
  className="quality-profiles-table-row text-middle"
  data-key="key"
  data-name="name"
>
  <td
    className="quality-profiles-table-name text-middle"
  >
    <div
      className="display-flex-center"
      style={
        Object {
          "paddingLeft": 0,
        }
      }
    >
      <div>
        <ProfileLink
          language="js"
          name="name"
          organization={null}
        >
          name
        </ProfileLink>
      </div>
    </div>
  </td>
  <td
    className="quality-profiles-table-projects thin nowrap text-middle text-right"
  >
    <span>
      3
    </span>
  </td>
  <td
    className="quality-profiles-table-rules thin nowrap text-middle text-right"
  >
    <div>
      <span
        className="spacer-right"
      >
        <Tooltip
          overlay="quality_profiles.deprecated_rules"
        >
          <Link
            className="badge badge-error"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/coding_rules",
                "query": Object {
                  "activation": "true",
                  "qprofile": "key",
                  "statuses": "DEPRECATED",
                },
              }
            }
          >
            10
          </Link>
        </Tooltip>
      </span>
      <Link
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/coding_rules",
            "query": Object {
              "activation": "true",
              "qprofile": "key",
            },
          }
        }
      >
        10
      </Link>
    </div>
  </td>
  <td
    className="quality-profiles-table-date thin nowrap text-middle text-right"
  >
    <ProfileDate />
  </td>
  <td
    className="quality-profiles-table-date thin nowrap text-middle text-right"
  >
    <ProfileDate />
  </td>
  <td
    className="quality-profiles-table-actions thin nowrap text-middle text-right"
  >
    <withRouter(ProfileActions)
      fromList={true}
      organization={null}
      profile={
        Object {
          "activeDeprecatedRuleCount": 10,
          "activeRuleCount": 10,
          "childrenCount": 0,
          "depth": 1,
          "isBuiltIn": false,
          "isDefault": false,
          "isInherited": false,
          "key": "key",
          "language": "js",
          "languageName": "JavaScript",
          "name": "name",
          "organization": "foo",
          "projectCount": 3,
        }
      }
      updateProfiles={[MockFunction]}
    />
  </td>
</tr>
`;
